--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,3 +4,9 @@
     line-height: 1.2;
     margin-left: 18px;
 }
+
+@media screen and (max-width: 1024px) {
+  .header__lang-link {
+    font-size: 18px;
+  }
+}
