--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,4 +4,26 @@
   line-height: 1.2;
   width: 640px;
   margin: auto;
+  margin-bottom: 64px;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__subtitle {
+    margin-bottom: 56px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .lead__subtitle {
+    font-size: 16px;
+    margin-bottom: 16px;
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 340px) {
+  .lead__subtitle {
+    margin-bottom: 40px;
+    font-size: 16px;
+  }
 }
