--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -4,5 +4,20 @@
   font-weight: 900;
   margin: auto;
   margin-bottom: 32px;
-  width: 73%;
+  text-align: center;
 }
+
+@media screen and (max-width: 700px) {
+  .lead__title {
+    font-size: 50px;
+    margin-bottom: 16px;
+  }
+}
+
+@media screen and (max-width: 340px) {
+  .lead__title {
+    font-size: 40px;
+    margin-bottom: 16px;
+  }
+}
+
