--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,9 +1,31 @@
 .photo-grid {
   display: grid;
-  width: 93%;
-  grid-template-columns: repeat(auto-fit, 284px);
-  grid-template-rows: repeat(auto-fit, 1fr);
+  width: 92.5%;
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+  /*grid-template-rows: repeat(auto-fit, 1fr);*/
   margin: auto;
   gap: 16px;
   margin-bottom: 92px;
+  grid-auto-flow: dense;
+  justify-items: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .photo-grid {
+    width: 91%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    width: 94%;
+    margin-bottom: 88px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .photo-grid {
+    width: 90%;
+    margin-bottom: 64px;
+  }
 }
