--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,13 +1,12 @@
-.intro__text {
-  font-size: 16px;
+.place__paragraph {
+  font-size: 18px;
   line-height: 163%;
   font-weight: normal;
   margin: 0;
-  margin-bottom: 33px;
 }
 
 @media screen and (max-width: 768px) {
-  .intro__text {
-    margin-bottom: 34px;
+  .place__paragraph {
+    font-size: 16px;
   }
 }
