--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,26 +1,24 @@
-.lead {
-  margin: 0 auto 92px auto;
+.places {
   width: 77%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
+  margin: auto;
 }
 
 @media screen and (max-width: 1024px) {
-  .lead {
-    width: 90%;
+  .places {
+    width: 91%;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .lead {
-    width: 100%;
+  .places {
+    width: 94%;
     margin-bottom: 88px;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .lead {
+  .places {
+    width: 100%;
     margin-bottom: 64px;
   }
 }
