--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -4,13 +4,13 @@
   -moz-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   font-family: "Inter";
-  width: 100vw;
+  width: 100%;
   max-width: 1280px;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   position: relative;
   background-color: #2A2C2F;
   color: white;
-  border: solid red 2px;
+  margin: 0 auto;
+  border: 2px greenyellow solid;
 }
