--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,3 +7,30 @@
   margin-top: 32px;
   padding-bottom: 25%;
 }
+
+@media screen and (max-width: 1024px) {
+  .cover__subtitle {
+    padding-bottom: 19%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover__subtitle {
+    padding-bottom: 15%;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .cover__subtitle {
+    font-size: 14px;
+    max-width: 288px;
+    margin-top: 16px;
+    padding-bottom: 25%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .cover__subtitle {
+    padding-bottom: 10%;
+  }
+}
