--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,3 +5,26 @@
   max-width: 560px;
   margin: 195px auto 0;
 }
+
+@media screen and (max-width: 1024px) {
+  .cover__title {
+    margin-top: 195px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover__title {
+    margin-top: 115px;
+  }
+}
+
+
+@media screen and (max-width: 620px) {
+  .cover__title {
+    margin-top: 33px;
+    font-size: 32px;
+    max-width: 288px;
+  }
+}
+
+
