--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,12 @@
 .cover {
   width: 93%;
   margin: auto;
-  min-height: 740px;
   text-align: center;
   position: relative;
+}
+
+@media screen and (max-width: 1024px) {
+  .cover {
+    width: 100%;
+  }
 }
