--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -17,3 +17,13 @@
   opacity: 0.8;
   transition: opacity 0.3s;
 }
+
+@media screen and (max-width: 620px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 1;
+    margin-top: 0;
+    margin-left: 0;
+    margin-bottom: 32px;
+  }
+}
