--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -2,3 +2,10 @@
   display: flex;
   align-items: flex-end;
 }
+
+@media screen and (max-width: 620px) {
+  .footer__links {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
