--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,3 +5,15 @@
   justify-content: space-between;
   align-items: flex-end;
 }
+
+@media screen and (max-width: 690px) {
+  .footer {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-top: 64px;
+    margin-bottom: 24px;
+    margin-left: 16px;
+    width: 186px;
+  }
+}
