--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,3 +2,9 @@
   grid-area: image;
   width: 100%;
 }
+
+@media screen and (max-width: 620px) {
+  .place__image {
+    margin-bottom: 32px;
+  }
+}
