--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -10,3 +10,13 @@
     font-size: 16px;
   }
 }
+
+@media screen and (max-width: 620px) {
+  .place__paragraph {
+    margin-bottom: 25px;
+  }
+
+  .place__paragraph:last-child {
+    margin-bottom: 0;
+  }
+}
