--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,3 +1,11 @@
 .place__paragraphs {
   grid-area: paragraphs;
 }
+
+@media screen and (max-width: 620px) {
+  .place__paragraphs {
+    align-self: flex-start;
+    width: 90%;
+    margin: auto;
+  }
+}
