--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -13,9 +13,10 @@
   }
 }
 
-@media screen and (max-width: 525px) {
+@media screen and (max-width: 620px) {
   .place__title {
     font-size: 32px;
+    margin: auto;
+    width: 90%;
   }
 }
-
