--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -4,13 +4,12 @@
   -moz-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   font-family: "Inter";
-  width: 100%;
+  width: 100vw;
   max-width: 1280px;
   display: flex;
   flex-direction: column;
   position: relative;
   background-color: #2A2C2F;
   color: white;
-  margin: 0 auto;
-  border: 2px greenyellow solid;
+  margin: auto;
 }
