--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -2,13 +2,29 @@
   text-decoration: none;
   color: #fff;
   cursor: url(../../../images/Pointer.svg), auto;
-  display: inline-block;
   width: 100%;
-  height: 100%;
-  margin: 0;
+  aspect-ratio: 1.6;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url('../../../images/train-station.jpg');
+  text-align: center;
+  background-position: center;
+  background-size: 100%;
+
 }
 
-.cover__link:hover .cover__image {
-  opacity: 0.3;
-  transition: opacity 1s;
+.cover__link:after {
+  content: " ";
+  background-color: rgba(42, 44, 47, 0.3);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.cover__link:hover::after {
+  background-color: rgba(42, 44, 47, 0.8);
+  transition: background-color .3s;
 }
