--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,34 +3,14 @@
   font-weight: normal;
   line-height: 1.2;
   max-width: 360px;
-  margin: auto;
+  margin: 0;
   margin-top: 32px;
-  padding-bottom: 25%;
-}
-
-@media screen and (max-width: 1024px) {
-  .cover__subtitle {
-    padding-bottom: 19%;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cover__subtitle {
-    padding-bottom: 15%;
-  }
+  z-index: 2;
 }
 
 @media screen and (max-width: 620px) {
   .cover__subtitle {
     font-size: 14px;
     max-width: 288px;
-    margin-top: 16px;
-    padding-bottom: 25%;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  .cover__subtitle {
-    padding-bottom: 10%;
   }
 }
