--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,28 +3,15 @@
   font-weight: 900;
   line-height: 1.05;
   max-width: 560px;
-  margin: 195px auto 0;
+  display: inline-block;
+  margin: 0;
+  z-index: 2;
 }
-
-@media screen and (max-width: 1024px) {
-  .cover__title {
-    margin-top: 195px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cover__title {
-    margin-top: 115px;
-  }
-}
-
 
 @media screen and (max-width: 620px) {
   .cover__title {
-    margin-top: 33px;
     font-size: 32px;
     max-width: 288px;
   }
 }
-
 
