--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,6 +6,7 @@
   font-size: 10px;
   line-height: 1.2;
   letter-spacing: 1.5px;
+  text-transform: uppercase;
 }
 
 @media screen and (max-width: 768px) {
