--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,9 +7,10 @@
   align-self: end;
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 768px) {
   .place__title {
     font-size: 42px;
+    line-height: 46px;
   }
 }
 
