--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -3,7 +3,7 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
-  font-family: "Inter";
+  font-family: 'Inter', Arial, sans-serif;
   width: 100vw;
   max-width: 1280px;
   display: flex;
