--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,5 @@
 @import url(../vendor/normalize.css);
+@import url(../vendor/fonts.css);
 @import url(../blocks/root/root.css);
 
 /* Header */
@@ -28,6 +29,8 @@
 /* Photo-grid */
 
 @import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
+
 
 /* Places */
 
@@ -52,7 +55,6 @@
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__link/cover__link.css);
 
-
 /* Footer */
 
 @import url(../blocks/footer/footer.css);
@@ -60,27 +62,3 @@
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__links/footer__links.css);
 
-/* Fonts */
-
-@font-face {
-  font-family: "Inter";
-  src:
-  url(../../vendor/Fonts/Inter-Regular.woff) format('woff'),
-  url(../../vendor/Fonts/Inter-Regular.woff2) format('woff2');
-  }
-
-@font-face {
-  font-family: "Inter";
-  src:
-  url(../../vendor/Fonts/Inter-Black.woff) format('woff'),
-  url(../../vendor/Fonts/Inter-Black.woff2) format('woff2');
-  font-weight: 900;
-  }
-
-@font-face {
-  font-family: "Inter";
-  src:
-  url(../../vendor/Fonts/Inter-Bold.woff) format('woff'),
-  url(../../vendor/Fonts/Inter-Bold.woff2) format('woff2');
-  font-weight: 700;
-  }
