--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -13,6 +13,7 @@
   text-align: center;
   background-position: center;
   background-size: 100%;
+  background-repeat: no-repeat;
 
 }
 
@@ -22,9 +23,9 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  transition: background-color .5s;
 }
 
 .cover__link:hover::after {
   background-color: rgba(42, 44, 47, 0.8);
-  transition: background-color .3s;
 }
