--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,25 +5,25 @@
   line-height: 1.1;
   font-weight: normal;
   margin: 0;
-  margin-right: 18px;
   cursor: url(../../../images/Pointer.svg), auto;
-}
-
-.footer__link:last-of-type {
-  margin-right: 0px;
+  margin-right: 20px;
+  transition: opacity 0.3s;
 }
 
 .footer__link:hover {
   opacity: 0.8;
-  transition: opacity 0.3s;
+}
+
+@media screen and (max-width: 1024px) {
+  .footer__link {
+    margin-right: 18px;
+  }
 }
 
 @media screen and (max-width: 620px) {
   .footer__link {
     font-size: 24px;
     line-height: 1;
-    margin-top: 0;
-    margin-left: 0;
     margin-bottom: 32px;
   }
 
