--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,10 +3,19 @@
     font-size: 24px;
     line-height: 1.2;
     margin-left: 18px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.header__lang-link:hover {
+  opacity: 0.8;
+  transition: opacity 0.3s;
 }
 
 @media screen and (max-width: 1024px) {
   .header__lang-link {
     font-size: 18px;
+    position: relative;
+    right: 5px;
   }
 }
