--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -10,12 +10,20 @@
 @media screen and (max-width: 1024px) {
   .header {
     margin-bottom: 48px;
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    width: 94%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .header {
-    margin-bottom: 48px;
+    width: 91%;
+    margin-bottom: 50px;
     margin-top: 16px;
   }
 }
