--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,12 +1,18 @@
 .lead__caption {
   text-align: left;
-  margin-top: 8px;
+  margin-top: 6px;
   margin-bottom: 0;
   font-weight: normal;
   font-size: 10px;
   line-height: 1.2;
   letter-spacing: 1.5px;
   text-transform: uppercase;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__caption {
+    margin-top: 10px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -17,6 +23,7 @@
 
 @media screen and (max-width: 320px) {
   .lead__caption {
+    margin-top: 6px;
     margin-left: 16px;
   }
 }
