--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -2,7 +2,8 @@
   font-size: 30px;
   font-weight: normal;
   line-height: 1.2;
-  width: 640px;
+  max-width: 640px;
+  width: 100%;
   margin: auto;
   margin-bottom: 64px;
 }
@@ -13,17 +14,22 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .lead__subtitle {
+    margin-bottom: 55px;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .lead__subtitle {
     font-size: 16px;
     margin-bottom: 16px;
-    width: 90%;
+    max-width: 90%;
   }
 }
 
 @media screen and (max-width: 340px) {
   .lead__subtitle {
     margin-bottom: 40px;
-    font-size: 16px;
   }
 }
