--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,6 +7,12 @@
   text-align: center;
 }
 
+@media screen and (max-width: 768px) {
+  .lead__title {
+    margin-bottom: 30px;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .lead__title {
     font-size: 50px;
@@ -17,7 +23,7 @@
 @media screen and (max-width: 340px) {
   .lead__title {
     font-size: 40px;
-    margin-bottom: 16px;
+    margin-bottom: 20px;
   }
 }
 
