--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -27,6 +27,7 @@
 @media screen and (max-width: 320px) {
   .photo-grid {
     width: 90%;
-    margin-bottom: 64px;
+    margin-bottom: 59px;
+    gap: 12px;
   }
 }
