--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,8 +3,12 @@
   line-height: 163%;
   font-weight: normal;
   margin: 0;
+  margin-bottom: 24px;
 }
 
+.place__paragraph:last-child {
+  margin-bottom: 0;
+}
 @media screen and (max-width: 768px) {
   .place__paragraph {
     font-size: 16px;
@@ -14,9 +18,5 @@
 @media screen and (max-width: 620px) {
   .place__paragraph {
     margin-bottom: 25px;
-  }
-
-  .place__paragraph:last-child {
-    margin-bottom: 0;
   }
 }
