--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -27,7 +27,13 @@
     justify-content: flex-start;
     margin-top: 64px;
     margin-bottom: 24px;
-    margin-left: 16px;
+    margin-left: 50px;
     width: 186px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .footer {
+    margin-left: 16px;
   }
 }
