--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -13,14 +13,15 @@
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 730px) {
   .lead__title {
     font-size: 50px;
     margin-bottom: 16px;
+    max-width: 90%;
   }
 }
 
-@media screen and (max-width: 340px) {
+@media screen and (max-width: 385px) {
   .lead__title {
     font-size: 40px;
     margin-bottom: 20px;
