--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,6 +7,14 @@
   align-self: end;
 }
 
+@media screen and (max-width: 1100px) {
+  .place__title {
+    font-size: 55px;
+  }
+}
+
+
+
 @media screen and (max-width: 768px) {
   .place__title {
     font-size: 42px;
